--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,20 @@
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+Complementarity = "a9b2a840-c9d5-5181-a245-8df664c2d6e7"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 ExcelReaders = "c04bee98-12a5-510c-87df-2a230cb6e075"
+Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
+Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
+JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+PATHSolver = "f5f7c340-0bb3-5c69-969a-41884d311d1b"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
+
+[compat]
+julia = "1.5"
