--- a/GEP/data_gep_louis.yaml
+++ b/GEP/data_gep_louis.yaml
@@ -2,7 +2,7 @@
 VOLL: 8700 # EUR / MWh (before 1000 €/MWh)
 CO2Price: 85.22 # EUR / ton (before 25 €/ton)
 nTimesteps: 24 # number of timesteps per representative day
-nReprDays: 12 # days
+nReprDays: 356 # days
 discountrate: 0.07 # -
 
 # Generator parameters
@@ -48,17 +48,22 @@ variableGenerators:
   lifetime: 25 # years (before 20)
   legcap:  # MW
 
-Off-Wind:
-  OC: 4800000 # EUR/MW
-  lifetime: 25 # years (before 20)
-  legcap:  # MW
+ Off-Wind:
+   OC: 4800000 # EUR/MW
+   lifetime: 25 # years (before 20)
+   legcap:  # MW
 
- Solar:
-  OC: 1700000 # EUR/MW 
-  lifetime: 25 # years (before 20)
-  legcap:  # MW
+ On-Solar:
+   OC: 1700000 # EUR/MW 
+   lifetime: 25 # years (before 20)
+   legcap:  # MW
 
-Storage:
-  Battery:
-    OC: 1300000 #EUR/MW
-    lifetime: 10 #years
+ Off-Solar:
+   OC: 1700000 # EUR/MW 
+   lifetime: 25 # years (before 20)
+   legcap:  # MW
+
+# Storage:
+#   Battery:
+#     OC: 1300000 #EUR/MW
+#     lifetime: 10 #years
