--- a/GEP/data_gep_louis.yaml
+++ b/GEP/data_gep_louis.yaml
@@ -2,7 +2,7 @@
 VOLL: 8700 # EUR / MWh (before 1000 €/MWh)
 CO2Price: 85.22 # EUR / ton (before 25 €/ton)
 nTimesteps: 24 # number of timesteps per representative day
-nReprDays: 356 # days
+nDays: 365 # days
 discountrate: 0.07 # -
 
 # Generator parameters
