--- a/GEP/data_gep_update_2.yaml
+++ b/GEP/data_gep_update_2.yaml
@@ -2,7 +2,7 @@
 VOLL: 8700 # EUR / MWh (before 1000 €/MWh)
 CO2Price: 128 # EUR / ton (before 25 €/ton)
 nTimesteps: 24 # number of timesteps per representative day
-nReprDays: 12 # days
+nDays: 365 # days
 discountrate: 0.07 # -
 
 # Generator parameters
@@ -27,15 +27,6 @@ dispatchableGenerators:
     emissions: 0.44 # ton/MWh
     lifetime: 30 # years
     legcap:  # MW
-
-
-  Coal:
-    OC: 3000000 # EUR/MW
-    fuelCosts: 47.8 # EUR/MWh 20.33 fuel & 27.5 O&M = 47.8 USD/MWh ## based on US data
-    emissions: 1.03 # ton/MWh
-    lifetime: 40 # years
-    legcap:  # MW
-
 
 variableGenerators:
   On-Wind:
